--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Ozanni.github.io/ris_portal/",
   "name": "cloudpacs-web-v4",
   "version": "1.2.78",
   "variant": "itech-core",
@@ -20,7 +21,9 @@
     "build-storybook": "build-storybook",
     "prebuild": "npm run version",
     "version": "node -p -e \"'export default \\'' + require('./package.json').version + '-' + require('./package.json').variant + '\\';'\" > src/version.js",
-    "chromatic": "chromatic --exit-zero-on-changes"
+    "chromatic": "chromatic --exit-zero-on-changes",
+    "predeploy": "yarn build:dev",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -122,6 +125,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-testing-library": "^5.10.0",
+    "gh-pages": "^6.1.1",
     "husky": "^8.0.3",
     "jsdom": "^21.1.0",
     "lint-staged": "^13.1.0",
